--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
-spring.view.prefix: /WEB-INF/jsp/
-spring.view.suffix: .jsp
+spring.view.prefix=/WEB-INF/jsp/
+spring.view.suffix=.jsp
+spring.datasource.url=jdbc:sqlserver://lincoln1206.database.windows.net;databaseName=lincoln
+spring.datasource.username=lincoln1206
+spring.datasource.password=2012120698lL
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=create-drop
